syntax = "proto3";
package mythos.cosmosmod.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos/staking/v1beta1/tx.proto";

option go_package = "mythos/v1/x/cosmosmod/types";
option (gogoproto.goproto_getters_all) = false;

// InitGenesisResponse is the InitGenesis response expected from smart contracts
// that act as modules
message InitGenesisResponse {
    repeated ValidatorUpdate updates = 1 [ (gogoproto.nullable) = false ];
}

message ValidatorUpdate {
    google.protobuf.Any pub_key = 1 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
    int64 power   = 2;
}
